# loan-parser

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: account_rules.json  config.py  db.py  main.py  models.py  requirements.txt  rules.py  tasks.py  worker.py
backend/parsers/: __init__.py  itau.py  sicoob.py
backend/tests/: test_itau_parser.py  test_main.py  test_parsers.py  test_rules.py  test_sicoob_parser.py  test_tasks.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: UploadExtrato.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Contratos.test.tsx  Contratos.tsx  ExtratosContrato.tsx  Login.tsx
tests/: conftest.py  test_parser.py
